src/styles/Soullink.css
@import url('https://fonts.googleapis.com/css2?family=Intel+One+Mono:ital,wght@0,300..700;1,300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Press+Start+2P&display=swap');

.SoullinkContainer {
  margin-top: 60px;
  min-width: 100% !important;
  color: azure;
  font-weight: bold;
  font-family: "Signika", sans-serif;
  text-align: center;
}

.SoullinkLoginContainer {
  min-height: 720px;
  justify-content: center;
}

#player {
  padding: 5px;
  margin: 5px;
  width: 100%;
  height: 100%;
}

#video-container {
  width: 1280px;
  height: 720px;
  border: 3px solid #008b8b;
  border-radius: 10px;
  background-color: rgba(88, 70, 255, 0.243);
}

.pokemon-side-text {
  max-width: 300px;
}

.soulllink-overlay {
  color: azure;
  font-weight: bold;
  font-family: "Signika", sans-serif;
  text-align: left;
  filter: drop-shadow(3px 3px 3px #222);
}

.pokemon-image {
  width: 128px;
  height: 128px;
  filter: drop-shadow(3px 3px 2px #222);
}

.pokemon-cell {
  width: 250px;
  position: relative;
  padding: 10px;
  border-radius: 20px;
}

.route-row-container {
  border: #05675d 4px solid;
  border-radius: 30px;
  background-color: #fefcbfee;
  padding: 10px;
  font-family: "Courier New", Courier, monospace;
  margin-bottom: 10px;
  width: 1400px;
}

.sl-route-pokemon-div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 400px;
}

.link-dead {
  filter: grayscale(100%) !important;
}

.link-dead-web {
  background-color: #5846ffee !important;
}

.link-inTeam {
  background-color: #71ff39ee !important;
}

.routeInfoCol {
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
  color: azure;
  font-size: 30px;
  height: 200px;
  justify-content: space-between;
  filter: drop-shadow(3px 3px 2px #222);
}

.soulLinkContainer {
  margin-top: 60px;
  margin-bottom: 40px;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.routeDiv {
  margin-top: 100px;
  width: 1000px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.miniRoute {
  background-color: #def08c;
  width: 120px;

  border: #05675d 2px solid;
  border-radius: 30px;
  padding: 10px;
  font-family: "Courier New", Courier, monospace;
  color: azure;
  margin: 5px;
}

.smallRouteCon {
  height: 150px !important;
}

.route-name {
  text-align: center;
  filter: drop-shadow(3px 3px 2px #222);
}

.mini-route-name {
  text-align: center;
  filter: drop-shadow(1px 1px 2px #222);
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  width: 96px;
  padding: 3px;
}

.mini-pkm-img-div {
  border: #000000 solid 2px;
  border-radius: 40%;
  width: 90px;
  height: 90px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.firstTrainerPkmn {
  background-color: #00e1ff;
  margin: 3px;
}

.secondTrainerPkmn {
  background-color: #ffa600;
  margin: 3px;
}

.thirdTrainerPkmn {
  background-color: #b84dff;
  margin: 3px;
}

.mini-pkm-img {
  filter: drop-shadow(3px 3px 2px #222);
}

.RouteRowOverlayCon {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 9999;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.RouteRowOverlayCon2xdd {
  filter: drop-shadow(3px 3px 2px #222);
}

.pokemon-name {
  text-align: center;
  color: azure;
  font-family: "Signika", sans-serif;
  font-size: 1.5rem;
  border: none;
  background: transparent;
  filter: drop-shadow(3px 3px 2px #222);
}

.soullink-desc-heaader {
  width: 900px;
  justify-content: space-around;
  position: fixed;
  z-index: 1030;
  border: #008b8b solid 2px;
  border-bottom-left-radius: 30px;
  border-bottom-right-radius: 30px;
  background-color: cadetblue;
  margin-top: -4px;
}

.soullink-desc-heaader h2 {
  color: azure;
  width: 20%;
  text-align: center;
}

.soullink-desc-heaader input {
  color: azure;
  width: 200px;
  text-align: center;
  font-size: 1.5rem;
  font-weight: bold;
  border: none;
  background: transparent;
}

.soullink-desc-heaader div {
  width: 220px;
}

.new-route-input {
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
  color: azure;
  font-size: 30px;
  position: fixed;
  left: 40px;
  top: 100px;
  width: 400px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.new-route-input input {
  width: 100%;
  margin-bottom: 10px;
}

.suggestion-list {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  z-index: 1000;
  max-height: 200px;
  overflow-y: auto;
  background-color: white;
  border: 1px solid #ddd;
  border-radius: 4px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.soullinkTeamOverlayContainer {
  min-width: 1280px;
  min-height: 720px;
  padding: 0;
  margin: 0;
}

.teamCol {
  min-width: 1280px;
  min-height: 720px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.teamOverlayPkmnImg {
  position: relative;
  filter: drop-shadow(3px 3px 2px #222);
}

.pngPkmnImg {
  width: 200px;
  height: 200px;
}

.gifPkmnImg {
  min-width: 120px;
  min-height: 120px;
  max-width: 160px;
  max-height: 160px;
}

.teamOverlayPkmnImg-Preview {
  position: relative;
  filter: drop-shadow(3px 3px 2px #222);
}

.pngPkmnImg-Preview {
  width: 100px;
  height: 100px;
}

.gifPkmnImg-Preview {
  min-width: 60px;
  min-height: 60px;
  max-width: 100px;
  max-height: 100px;
}

.pkmnBallImg {
  width: 200px;
  position: absolute;
  left: 0;
  top: 0;
}

.pkmnBallImg-Preview {
  width: 100px;
  position: absolute;
  left: 0;
  top: 0;
}

.soullinkImgDiv {
  width: 200px;
  height: 200px;
  position: relative;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.soullinkImgDiv-Preview {
  width: 100px;
  height: 100px;
  position: relative;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.teamRow {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.teamRow-background {
  position: relative;
  border: #2b3535 solid 4px;
  border-radius: 30px;
  margin: 5px;
  /* padding: 10px; */
  overflow: hidden;
  box-shadow:
    inset 0 1px 0 rgba(255, 255, 255, 0.08),
    0 4px 18px rgba(0, 0, 0, 0.18);
  width: fit-content;
}

.teamRow-background::before {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: inherit;

  pointer-events: none;
  z-index: 0;
}

.teamRow-background>* {
  position: relative;
  z-index: 1;
}

.team-0 {
  background:
    repeating-conic-gradient(#e3e3e3 0 25%, #59a45f 0 50%) 50% / 20px 20px;
}

.team-1 {
  background:
    repeating-conic-gradient(#e3e3e3 0 25%, #6997e1 0 50%) 50% / 20px 20px;
}

.team-2 {
  background:
    repeating-conic-gradient(#e3e3e3 0 25%, #d17575 0 50%) 50% / 20px 20px;
}

.teamCol-Preview {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 110px;
}

.deleteRouteButton {
  width: 40px;
  font-size: 30px;
  font-family: monospace;
  font-weight: bold;
  text-align: center;
}

.teampreviewCon {
  position: fixed;
  width: 360px;
  height: 700px;
  right: 50px;
  top: 80px;
  /* background-color: #008b8b; */
  padding: 5px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.soullinkInstructions {
  text-align: center;
}

.soullinkInstructions p {
  font-size: 24px;
}

.nuzlockResetButton {
  margin: 20px;
  font-size: 30px;
}

.SLsettingsCOl .dedo-switch-container {
  width: 100%;
}

.pkmn-Nickname {
  font-size: 20px;
  font-family: "Press Start 2P", system-ui;
  font-weight: 400;
  font-style: normal;
  color: azure;
  text-align: center;
  filter: drop-shadow(3px 3px 2px #222);
  position: absolute;
  bottom: 5px;
}

.pkmn-Nickname-preview {
  font-size: 15px;
  font-family: "Press Start 2P", system-ui;
  font-weight: 400;
  font-style: normal;
  color: azure;
  text-align: center;
  filter: drop-shadow(3px 3px 2px #222);
  position: absolute;
  bottom: 5px;
}

.route-Manager {
  position: fixed;
  top: 80px;
  left: 0;
  width: 100vw;
  height: 100px;
  z-index: 9999;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  color: azure;
  font-weight: bold;
  font-family: "Signika", sans-serif;
  text-align: center;
  filter: drop-shadow(3px 3px 2px #222);
}

.route-Manager input {
  padding: 5px;
  border-radius: 4px;
}

.SLsettingsCOl-participants {
  font-size: 32px;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.sco-container .teamRow {
  scale: 0.49;
}

.sco-trainer1 {
  position: absolute;
  top: 422px;
  left: -50px;
}

.sco-trainer2 {
  position: absolute;
  top: 422px;
  left: 600px;
}

.sco-trainer3 {
  position: absolute;
  top: 422px;
  left: 1250px;
}

.sco-death-img {
  width: 60px;
  height: 60px;
  /* filter: drop-shadow(3px 3px 2px #222); */
  /* background-color: #e8c957; */
  /* border-radius: 20px; */
  /* padding: 4px; */
}

.sco-death {
  position: absolute;

  top: 600px;

  width: 150px;
  height: 80px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  background: linear-gradient(135deg, #74b173 0%, #b3e673 100%);
  border: solid 4px #253d2c;
  border-radius: 20px;
  filter: drop-shadow(3px 3px 2px #222);
  font-family: "Press Start 2P", system-ui;
  font-size: 22px;
  font-weight: 900;
  /* color: #181a1a; */
  color: azure;
}

.sco-deaths1 {
  left: 500px;
}

.sco-deaths2 {
  left: 870px;
}

.sco-deaths3 {
  top: 640px;
  left: 1750px;
}

.sco-runs {
  position: absolute;
  top: 580px;
  left: 1580px;

  filter: drop-shadow(3px 3px 2px #222);
  font-family: "Press Start 2P", system-ui;
  font-size: 44px;
  font-weight: 900;
  /* color: #181a1a; */
  color: azure;
}

